# library

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example.env  nginx.conf  pyproject.toml
account/: forms.py  managers.py  models.py  permissions.py  serializers.py  views.py
account/management/commands/: create_groups.py
account/migrations/: 0001_initial.py
catalog/: admin.py  context_processor_genre.py  errors.py  models.py  serializers.py  urls.py  views.py
catalog/management/commands/: books.json  create_authors_books.py  genre.json  task.py
catalog/migrations/: 0001_initial.py
frontend/: urls.py
frontend/static/frontend/assets/css/: style.css
frontend/static/frontend/assets/js/: app.js  book-detail.js  index.js  userAccount.js
frontend/templates/admin/frontend/: account.html  base.html  base1.html  book_detail.html  books.html  error.html  index.html  login.html  profile.html  profileAvatar.html  register.html
frontend/templates/frontend/: account.html  base.html  book-list.html  book_detail.html  books.html  catalog.html  index.html  login.html  profile.html  register.html
frontend/templates/includes/: no-authorized.html  pagination.html  profile-menu.html
tests/: test_all.py
